--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tikal-fuse-core": "git+https://github.com/menico/tikal-fuse-core.git"
   },
   "devDependencies": {
+    "eslint": "^4.2.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.0",
