--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "http-proxy": "^1.16.2",
+    "jsonwebtoken": "^7.4.1",
+    "nedb": "^1.8.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "tikal-fuse-core": "git+https://github.com/menico/tikal-fuse-core.git"
+    "tikal-fuse-core": "git+https://github.com/menico/tikal-fuse-core.git",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
